# actasp

./: CMakeLists.txt  Doxyfile
include/actasp/: AspFluent.h  AspKR.h  AspLaw.h  MultiPlanner.h  PartialPolicy.h  QueryGenerator.h  action_utils.h  state_utils.h
include/actasp/executors/: PartialPolicyExecutor.h
include/actasp/reasoners/: Clingo.h  Clingo4_2.h  Reasoner.h
src/: AnswerSet.cpp  AspFluent.cpp  CMakeLists.txt  PartialPolicy.cpp
src/executors/: PartialPolicyExecutor.cpp
src/reasoners/: CMakeLists.txt  Clingo.cpp  Clingo4_2.cpp  Reasoner.cpp
test/griddomain/: grid.asp  grid_actions_next_state.txt
test/griddomain4/: grid4.asp
test/src/clingo3/: TestAnswerSet.cpp  TestClingo.cpp  TestReasoner.cpp
test/src/clingo4/: TestAspFluent.cpp  TestClingo.cpp  TestIsLocalyOptimal.cpp  TestReasoner.cpp
